--- a/package.json
+++ b/package.json
@@ -7,23 +7,26 @@
     "body-parser": "^1.19.2",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongodb": "^4.4.0",
+    "mongoose": "^6.2.3",
     "nodemon": "^2.0.15",
     "vue": "^3.2.29",
     "vue-basic-alert": "^1.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node backend/index.js",
-    "dev": "nodemon backend/index.js"
+    "server": "node backend/server.js --ignore 'client/",
+    "client": "npm run server --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Trinhity/CookBook.git"
   },
   "author": "Nick Trinh",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Trinhity/CookBook/issues"
   },
