--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
+    "start": "node ./server/app.js",
     "dev": "nodemon ./server/app.js"
   },
   "repository": {
