--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.3",
     "mongodb": "^4.4.0",
     "mongoose": "^6.2.3",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "vue": "^3.2.29",
     "vue-basic-alert": "^1.1.0"
