--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mdi/js": "^6.5.95",
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
@@ -14,6 +15,7 @@
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
+    "@mdi/font": "^6.5.95",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
