--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/js": "^6.5.95",
     "axios": "^0.26.0",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
