--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "vue": "^3.2.29",
-    "vue-basic-alert": "^1.1.0"
+    "vue-basic-alert": "^1.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {},
   "scripts": {
