--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Cookbook app using full stack vue and express",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.0",
     "mongoose": "^6.2.3",
     "multer": "^1.4.4",
