--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,9 @@
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.0",
-    "vuex": "^3.0.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@mdi/font": "^6.5.95",
